--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Bonne chance et bienvenue en Australie.</h2>
     <section class="bg-primary" id="">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Starting A Successful Business</h2>
                     <hr class="light">
                     <p>Before starting a business you need to decide what type of entity you wish to use to operate your business. The choices are: sole trader, partnership, private company or trust. This choice is important as income tax law and business law apply differently to each of these entities. You will also find that there are taxes in Australia which do not exist in France and vice- versa, so you will want to have a basic understanding of how Australian taxation might affect your business.</p>
@@ -169,7 +169,7 @@ Bonne chance et bienvenue en Australie.</h2>
     <section class="bg-white" id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <p>Please feel free to contact me via email with any queries you may have or for further advice. This is a free service, however I would be happy to receive your enquiries or referrals regarding my professional services in due course.</p>
